--- a/web/resources/css/propio/utils.css
+++ b/web/resources/css/propio/utils.css
@@ -201,3 +201,7 @@ root {
 .tdempresa{
     width: 25px;
 }
+
+tr, td, table {
+padding: 0px; margin: 0px; border: 0px; border-collapse: collapse;
+}
